# Machine-learning-zoomcamp

./: Dockerfile  Homework.ipynb  pyproject.toml
03- Classification/: car-lead-scoring.ipynb
Intro/: Homework.ipynb
Mid-term/Documentation/: readme (1).md
Regression/: Car_fuel_efficiency.ipynb
capstone-1-pima-diabetes/: Dockerfile  README.MD  main.py  predict.py  pyproject.toml  test.py
capstone-1-pima-diabetes/notebooks/: Pima_Indians_Dataset_Capstone_1.ipynb
capstone-2-car-damage-severity/: .gitignore  README.md  car-damage-severity-prediction.ipynb
capstone-2-car-damage-severity/app/: inference.py  labels.py  main.py
capstone-2-car-damage-severity/model/: car_damage_model.tflite
