[project]
name = "capstone-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "fastapi>=0.128.0",
    "numpy<2",
    "pillow>=12.1.0",
    "python-multipart>=0.0.21",
    "tensorflow-cpu>=2.20.0",
    "uvicorn>=0.40.0",
]
